fix_scrollbar

--- a/musica_space/css/style.css
+++ b/musica_space/css/style.css
@@ -27,11 +27,7 @@ html {
     overflow-x: hidden;
 }
 
-body {
-    overflow-y: scroll;
-    overflow-x: hidden;
-    position: relative;
-}
+
 
 body::-webkit-scrollbar {
     display: none
